--- a/All post/post-1/Crud.html
+++ b/All post/post-1/Crud.html
@@ -882,12 +882,11 @@
             <!-- rightcolumn -->
             <div class="rightcolumn">
                 <div class="card">
-                    <h2>About Me</h2>
-                    <div class="about-me" style="height:auto;">
-                        <img src="https://avatars.githubusercontent.com/u/97939228?v=4"
-                            class="img-fluid mx-auto d-block" alt="">
+                    <h3>Download Code here</h3>
+                    <div class="tag">
+                        <a href="https://github.com/Mgt789/Student_CRUD" target="_blank">
+                            1. CRUD Operation With MVC Core</a>
                     </div>
-                    <p>I am chandan Meher. I am a Junior FullStack Developer. I loved to write code.</p>
                 </div>
                 <div class="card">
                     <h3>Popular Post</h3>
