--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
                     <span>Click the image or link to go to my github account</span>
                 </div>
                 <div class="card">
-                    <h3>Popular Post Code</h3>
+                    <h3>Download Code here</h3>
                     <div class="tag">
-                        <a href="#">1. CRUD Operation With MVC Core</a>
+                        <a href="https://github.com/Mgt789/Student_CRUD" target="_blank">
+                            1. CRUD Operation With MVC Core</a>
                     </div><br>
                     <div class="tag">
-                        <a href="#">2. File Upload, Download and Display in MVC Core</a>
+                        <a href="https://github.com/Mgt789/Image_Upload_Download" target="_blank">
+                            2. File Upload, Download and Display in MVC Core</a>
                     </div><br>
                     <!-- <div class="fakeimg">Image</div> -->
                 </div>
