--- a/All post/post-2/imageUpload.html
+++ b/All post/post-2/imageUpload.html
@@ -255,12 +255,10 @@
             <!-- rightcolumn -->
             <div class="rightcolumn">
                 <div class="card">
-                    <h2>About Me</h2>
-                    <div class="about-me" style="height:auto;">
-                        <img src="https://avatars.githubusercontent.com/u/97939228?v=4"
-                            class="img-fluid mx-auto d-block" alt="">
-                    </div>
-                    <p>I am chandan Meher. I am a Junior FullStack Developer. I loved to write code.</p>
+                    <div class="tag">
+                        <a href="https://github.com/Mgt789/Image_Upload_Download" target="_blank">
+                            2. File Upload, Download and Display in MVC Core</a>
+                    </div><br>
                 </div>
                 <div class="card">
                     <h3>Popular Post</h3>
