--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     <div class="col-xl-6 col-lg-6 col-sm-12 col-md-6 col-12 ">
                         <div class="hero_content">
                             <div class="hero_bg_image">
-                                <img src="https://www.addthis.com/dietsite-assets/images/homepage/watch-video.svg" class="img-fluid mx-auto d-block" alt="">
+                                <img src="https://www.addthis.com/dietsite-assets/images/homepage/watch-video.svg"
+                                    class="img-fluid mx-auto d-block" alt="">
                                 <div class="hero-text-center">
                                     <a href="#body" class="btn">Get Start</a>
                                 </div>
@@ -102,6 +103,8 @@
 
         <div class="row">
             <div class="leftcolumn">
+
+                <!-- post-1  -->
                 <div class="card">
                     <h2>CRUD Operation With MVC Core</h2>
                     <h5>Date: May 20, 2022</h5>
@@ -113,7 +116,7 @@
                 <br>
                 <a href="./All post/post-1/Crud.html " class="btn btn-primary">Read More</a>
 
-
+                <!-- post-2  -->
                 <div class="card">
                     <h2>File Upload, Download and Display in MVC Core</h2>
                     <h5>Date: May 26, 2022</h5>
@@ -124,6 +127,18 @@
                 </div>
                 <br>
                 <a href="./All post/post-2/imageUpload.html" class="btn btn-primary">Read More</a>
+
+                <!-- post-3  -->
+                <div class="card">
+                    <h2>Register and Login Page with .NET CORE</h2>
+                    <h5>Date: May 30, 2022</h5>
+                    <div class="fakeimg" style="height:auto;">
+                        <img src="https://img.freepik.com/free-vector/isometric-landing-page-user-login_157884-17.jpg?w=740"
+                            class="img-fluid d-block mx-auto" alt="">
+                    </div>
+                </div>
+                <br>
+                <a href="./All post/post-3/Register_Login.html" class="btn btn-primary">Read More</a>
 
             </div>
             <div class="rightcolumn">
@@ -139,14 +154,25 @@
                 </div>
                 <div class="card">
                     <h3>Download Code here</h3>
+                    <!-- post-1  -->
                     <div class="tag">
                         <a href="https://github.com/Mgt789/Student_CRUD" target="_blank">
                             1. CRUD Operation With MVC Core</a>
                     </div><br>
+
+                    <!-- post-2  -->
                     <div class="tag">
                         <a href="https://github.com/Mgt789/Image_Upload_Download" target="_blank">
                             2. File Upload, Download and Display in MVC Core</a>
                     </div><br>
+
+                    <!-- post-3  -->
+                    <div class="tag">
+                        <a href="https://github.com/Mgt789/Login_Register" target="_blank">
+                            3. Register and Login Page with .NET CORE</a>
+                    </div><br>
+
+
                     <!-- <div class="fakeimg">Image</div> -->
                 </div>
                 <div class="card">
